src/SnapSubset/antlr4/SnapGrammarParser.java
package antlr4;
// Generated from SnapGrammar.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SnapGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PRAGMA=1, STRING=2, SINGLELINE_COMMENT=3, MULTILINE_COMMENT=4, REGULAR_EXPRESSION=5, 
		NEW=6, THROW=7, DELETE=8, BREAK=9, CONTINUE=10, RETURN=11, FOR=12, WHILE=13, 
		IN=14, IF=15, DO=16, SWITCH=17, CASE=18, DEFAULT=19, TRY=20, CATCH=21, 
		FINALLY=22, ELSE=23, TRUE=24, FALSE=25, INCREMENT=26, DECREMENT=27, PLUS=28, 
		MINUS=29, MULTIPLICATION=30, DIVISION=31, MODULUS=32, BIT_AND=33, BIT_OR=34, 
		BIT_XOR=35, BIT_NOT=36, SHIFT_LEFT=37, SHIFT_RIGHT_PROP=38, SHIFT_RIGHT=39, 
		VAR=40, AND=41, OR=42, NOT=43, INSTANCEOF=44, TYPEOF=45, ASSIGN=46, PASSIGN=47, 
		MASSIGN=48, DIVASSIGN=49, MULTASSIGN=50, MODASSIGN=51, EQ=52, NE=53, GT=54, 
		LT=55, GE=56, LE=57, COMMA=58, COLON=59, QUESTIONMARK=60, END_STATEMENT=61, 
		RSB=62, LSB=63, RB=64, LB=65, RP=66, LP=67, FUNCTION=68, DOT=69, NUMBER=70, 
		ID=71, WS=72;
	public static final int
		RULE_jsnap_code = 0, RULE_pragma = 1, RULE_statement = 2, RULE_compressed_conditional_util = 3, 
		RULE_declaration_util = 4, RULE_var_assign_util = 5, RULE_assign_util = 6, 
		RULE_if_util = 7, RULE_try_catch_util = 8, RULE_try_catch_util_try = 9, 
		RULE_try_catch_util_catch = 10, RULE_try_catch_util_finally = 11, RULE_return_util = 12, 
		RULE_for_util = 13, RULE_for_parameters = 14, RULE_function_declaration_util = 15, 
		RULE_switch_util = 16, RULE_switch_body = 17, RULE_switch_case = 18, RULE_switch_default = 19, 
		RULE_while_util = 20, RULE_do_while_util = 21, RULE_statement_list_util = 22, 
		RULE_assign_operator = 23, RULE_parameters = 24, RULE_instruction = 25, 
		RULE_new_object_declaration_util = 26, RULE_object_access_util = 27, RULE_object_attribute = 28, 
		RULE_access_operator = 29, RULE_parenthesized_operation_util = 30, RULE_atom = 31, 
		RULE_code_block_util = 32, RULE_code_block_util_contents = 33, RULE_array_util = 34, 
		RULE_identifier_util = 35, RULE_id = 36, RULE_json_contents = 37, RULE_typeof_operator = 38, 
		RULE_and_operator = 39, RULE_or_operator = 40, RULE_sign_operator = 41, 
		RULE_comparison_operator = 42, RULE_bit_operator = 43, RULE_xment_operator = 44, 
		RULE_arithmetic_operator = 45, RULE_glorified_arithmetic_operator = 46, 
		RULE_end_statement = 47;
	public static final String[] ruleNames = {
		"jsnap_code", "pragma", "statement", "compressed_conditional_util", "declaration_util", 
		"var_assign_util", "assign_util", "if_util", "try_catch_util", "try_catch_util_try", 
		"try_catch_util_catch", "try_catch_util_finally", "return_util", "for_util", 
		"for_parameters", "function_declaration_util", "switch_util", "switch_body", 
		"switch_case", "switch_default", "while_util", "do_while_util", "statement_list_util", 
		"assign_operator", "parameters", "instruction", "new_object_declaration_util", 
		"object_access_util", "object_attribute", "access_operator", "parenthesized_operation_util", 
		"atom", "code_block_util", "code_block_util_contents", "array_util", "identifier_util", 
		"id", "json_contents", "typeof_operator", "and_operator", "or_operator", 
		"sign_operator", "comparison_operator", "bit_operator", "xment_operator", 
		"arithmetic_operator", "glorified_arithmetic_operator", "end_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, "'new'", "'throw'", "'delete'", "'break'", 
		"'continue'", "'return'", "'for'", "'while'", "'in'", "'if'", "'do'", 
		"'switch'", "'case'", "'default'", "'try'", "'catch'", "'finally'", "'else'", 
		"'true'", "'false'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'>>>'", "'var'", "'&&'", 
		"'||'", "'!'", "'instanceof'", "'typeof'", "'='", "'+='", "'-='", "'/='", 
		"'*='", "'%='", null, null, "'>'", "'<'", "'>='", "'<='", "','", "':'", 
		"'?'", "';'", "']'", "'['", "'}'", "'{'", "')'", "'('", "'function'", 
		"'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PRAGMA", "STRING", "SINGLELINE_COMMENT", "MULTILINE_COMMENT", "REGULAR_EXPRESSION", 
		"NEW", "THROW", "DELETE", "BREAK", "CONTINUE", "RETURN", "FOR", "WHILE", 
		"IN", "IF", "DO", "SWITCH", "CASE", "DEFAULT", "TRY", "CATCH", "FINALLY", 
		"ELSE", "TRUE", "FALSE", "INCREMENT", "DECREMENT", "PLUS", "MINUS", "MULTIPLICATION", 
		"DIVISION", "MODULUS", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", "SHIFT_LEFT", 
		"SHIFT_RIGHT_PROP", "SHIFT_RIGHT", "VAR", "AND", "OR", "NOT", "INSTANCEOF", 
		"TYPEOF", "ASSIGN", "PASSIGN", "MASSIGN", "DIVASSIGN", "MULTASSIGN", "MODASSIGN", 
		"EQ", "NE", "GT", "LT", "GE", "LE", "COMMA", "COLON", "QUESTIONMARK", 
		"END_STATEMENT", "RSB", "LSB", "RB", "LB", "RP", "LP", "FUNCTION", "DOT", 
		"NUMBER", "ID", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SnapGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SnapGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Jsnap_codeContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SnapGrammarParser.EOF, 0); }
		public List<Function_declaration_utilContext> function_declaration_util() {
			return getRuleContexts(Function_declaration_utilContext.class);
		}
		public Function_declaration_utilContext function_declaration_util(int i) {
			return getRuleContext(Function_declaration_utilContext.class,i);
		}
		public List<Assign_utilContext> assign_util() {
			return getRuleContexts(Assign_utilContext.class);
		}
		public Assign_utilContext assign_util(int i) {
			return getRuleContext(Assign_utilContext.class,i);
		}
		public List<End_statementContext> end_statement() {
			return getRuleContexts(End_statementContext.class);
		}
		public End_statementContext end_statement(int i) {
			return getRuleContext(End_statementContext.class,i);
		}
		public List<Declaration_utilContext> declaration_util() {
			return getRuleContexts(Declaration_utilContext.class);
		}
		public Declaration_utilContext declaration_util(int i) {
			return getRuleContext(Declaration_utilContext.class,i);
		}
		public List<Object_access_utilContext> object_access_util() {
			return getRuleContexts(Object_access_utilContext.class);
		}
		public Object_access_utilContext object_access_util(int i) {
			return getRuleContext(Object_access_utilContext.class,i);
		}
		public List<PragmaContext> pragma() {
			return getRuleContexts(PragmaContext.class);
		}
		public PragmaContext pragma(int i) {
			return getRuleContext(PragmaContext.class,i);
		}
		public Jsnap_codeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsnap_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterJsnap_code(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitJsnap_code(this);
		}
	}

	public final Jsnap_codeContext jsnap_code() throws RecognitionException {
		Jsnap_codeContext _localctx = new Jsnap_codeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_jsnap_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRAGMA) | (1L << STRING) | (1L << REGULAR_EXPRESSION) | (1L << NEW) | (1L << TRUE) | (1L << FALSE) | (1L << VAR) | (1L << LSB))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (LB - 65)) | (1L << (LP - 65)) | (1L << (FUNCTION - 65)) | (1L << (NUMBER - 65)) | (1L << (ID - 65)))) != 0)) {
				{
				setState(107);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(96);
					function_declaration_util();
					}
					break;
				case 2:
					{
					setState(97);
					assign_util();
					setState(98);
					end_statement();
					}
					break;
				case 3:
					{
					setState(100);
					declaration_util();
					setState(101);
					end_statement();
					}
					break;
				case 4:
					{
					setState(103);
					object_access_util();
					setState(104);
					end_statement();
					}
					break;
				case 5:
					{
					setState(106);
					pragma();
					}
					break;
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PragmaContext extends ParserRuleContext {
		public TerminalNode PRAGMA() { return getToken(SnapGrammarParser.PRAGMA, 0); }
		public PragmaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pragma; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterPragma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitPragma(this);
		}
	}

	public final PragmaContext pragma() throws RecognitionException {
		PragmaContext _localctx = new PragmaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pragma);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(PRAGMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Try_catchContext extends StatementContext {
		public Try_catch_utilContext try_catch_util() {
			return getRuleContext(Try_catch_utilContext.class,0);
		}
		public Try_catchContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterTry_catch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitTry_catch(this);
		}
	}
	public static class Compressed_conditionalContext extends StatementContext {
		public Compressed_conditional_utilContext compressed_conditional_util() {
			return getRuleContext(Compressed_conditional_utilContext.class,0);
		}
		public Compressed_conditionalContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterCompressed_conditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitCompressed_conditional(this);
		}
	}
	public static class ForContext extends StatementContext {
		public For_utilContext for_util() {
			return getRuleContext(For_utilContext.class,0);
		}
		public ForContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitFor(this);
		}
	}
	public static class WhileContext extends StatementContext {
		public While_utilContext while_util() {
			return getRuleContext(While_utilContext.class,0);
		}
		public WhileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitWhile(this);
		}
	}
	public static class DeclarationContext extends StatementContext {
		public Declaration_utilContext declaration_util() {
			return getRuleContext(Declaration_utilContext.class,0);
		}
		public DeclarationContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitDeclaration(this);
		}
	}
	public static class IfContext extends StatementContext {
		public If_utilContext if_util() {
			return getRuleContext(If_utilContext.class,0);
		}
		public IfContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitIf(this);
		}
	}
	public static class OperationContext extends StatementContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public OperationContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitOperation(this);
		}
	}
	public static class ReturnContext extends StatementContext {
		public Return_utilContext return_util() {
			return getRuleContext(Return_utilContext.class,0);
		}
		public ReturnContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitReturn(this);
		}
	}
	public static class Do_whileContext extends StatementContext {
		public Do_while_utilContext do_while_util() {
			return getRuleContext(Do_while_utilContext.class,0);
		}
		public Do_whileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterDo_while(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitDo_while(this);
		}
	}
	public static class AssignContext extends StatementContext {
		public Assign_utilContext assign_util() {
			return getRuleContext(Assign_utilContext.class,0);
		}
		public AssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitAssign(this);
		}
	}
	public static class SwitchContext extends StatementContext {
		public Switch_utilContext switch_util() {
			return getRuleContext(Switch_utilContext.class,0);
		}
		public SwitchContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterSwitch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitSwitch(this);
		}
	}
	public static class Statement_listContext extends StatementContext {
		public Statement_list_utilContext statement_list_util() {
			return getRuleContext(Statement_list_utilContext.class,0);
		}
		public Statement_listContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterStatement_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitStatement_list(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new DeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				declaration_util();
				}
				break;
			case 2:
				_localctx = new AssignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				assign_util();
				}
				break;
			case 3:
				_localctx = new IfContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				if_util();
				}
				break;
			case 4:
				_localctx = new Try_catchContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(119);
				try_catch_util();
				}
				break;
			case 5:
				_localctx = new ReturnContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(120);
				return_util();
				}
				break;
			case 6:
				_localctx = new ForContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(121);
				for_util();
				}
				break;
			case 7:
				_localctx = new SwitchContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(122);
				switch_util();
				}
				break;
			case 8:
				_localctx = new WhileContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(123);
				while_util();
				}
				break;
			case 9:
				_localctx = new Do_whileContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(124);
				do_while_util();
				}
				break;
			case 10:
				_localctx = new OperationContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(125);
				instruction(0);
				}
				break;
			case 11:
				_localctx = new Statement_listContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(126);
				statement_list_util();
				}
				break;
			case 12:
				_localctx = new Compressed_conditionalContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(127);
				compressed_conditional_util();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compressed_conditional_utilContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public TerminalNode QUESTIONMARK() { return getToken(SnapGrammarParser.QUESTIONMARK, 0); }
		public TerminalNode COLON() { return getToken(SnapGrammarParser.COLON, 0); }
		public List<Assign_utilContext> assign_util() {
			return getRuleContexts(Assign_utilContext.class);
		}
		public Assign_utilContext assign_util(int i) {
			return getRuleContext(Assign_utilContext.class,i);
		}
		public List<Return_utilContext> return_util() {
			return getRuleContexts(Return_utilContext.class);
		}
		public Return_utilContext return_util(int i) {
			return getRuleContext(Return_utilContext.class,i);
		}
		public List<Function_declaration_utilContext> function_declaration_util() {
			return getRuleContexts(Function_declaration_utilContext.class);
		}
		public Function_declaration_utilContext function_declaration_util(int i) {
			return getRuleContext(Function_declaration_utilContext.class,i);
		}
		public List<Compressed_conditional_utilContext> compressed_conditional_util() {
			return getRuleContexts(Compressed_conditional_utilContext.class);
		}
		public Compressed_conditional_utilContext compressed_conditional_util(int i) {
			return getRuleContext(Compressed_conditional_utilContext.class,i);
		}
		public Compressed_conditional_utilContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compressed_conditional_util; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).enterCompressed_conditional_util(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SnapGrammarListener ) ((SnapGrammarListener)listener).exitCompressed_conditional_util(this);
		}
	}
